--- a/source/sass/partials/_blog_preload.scss
+++ b/source/sass/partials/_blog_preload.scss
@@ -2,6 +2,7 @@
 	max-width:700px;
 	margin:0 auto 50px;
 	padding:80px 0 0 0;
+	position:relative;
 }
 .blog-entry {
 	margin-bottom:40px;
